feat: Enable pip installation from GitHub with comprehensive setup
- Add pyproject.toml with modern Python packaging configuration
- Create setup.py for backward compatibility
- Generate requirements.txt with all dependencies
- Add comprehensive bilingual installation guide (INSTALL.md)
- Fix encoding issues for multi-language support (UTF-8, Shift-JIS, CP932)
- Add Delphi/Pascal analyzer wrapper for CLI integration
- Fix detector and MermaidGenerator to handle both dict and object types
- Update CLI to avoid Unicode issues on Windows console
- Add DrawIO conversion support from Mermaid format
- Update .gitignore to exclude test files and temporary directories

This enables users to install ADG directly from GitHub using:
pip install git+https://github.com/username/Auto_Diagram_Generator.git

--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,22 @@ temp/
 *.png
 *.pdf
 diagrams/
+test_diagrams/
+test_*_output*/
+*_diagrams*/
+test_*.py
+test_*.pas
 
 # Config overrides
 config/local.yaml
 config/*.local.yaml
+
+# Temporary and test files
+tmp/
+temp/
+*.bak
+*.orig
+test_results/
+
+# Generated installation files
+*.whl
