--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,54 @@
+[project]
+name = "auto-diagram-generator"
+version = "2.2.1"
+description = "Intelligent code analysis and diagram generation tool"
+readme = "README.md"
+requires-python = ">=3.10"
+dependencies = [
+    "click>=8.0.0",
+    "loguru>=0.7.0",
+    "rich>=14.0.0",
+    "pytz>=2023.3",
+    "pyyaml>=6.0",
+    "tree-sitter>=0.25.0",
+    "tree-sitter-languages>=1.10.0",
+    "graphviz>=0.20",
+    "javalang>=0.13.0",
+    "esprima>=4.0.0",
+    "astroid>=3.0.0",
+    "python-dotenv>=1.0.0",
+    "playwright>=1.40.0",
+    "psutil>=5.9.0",
+]
+
+[project.scripts]
+adg = "adg.cli.command:main"
+
+[build-system]
+requires = ["setuptools>=61.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["adg"]
+package-dir = {"" = "src"}
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+
 [tool.black]
 line-length = 100
-target-version = ['py39', 'py310', 'py311']
-include = '\.pyi?$'
+target-version = ["py39", "py310", "py311", "py312"]
 
-[tool.isort]
-profile = "black"
-line_length = 100
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "C4"]
 
 [tool.mypy]
 python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_any_unimported = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-check_untyped_defs = true
-strict_equality = true
-
-[tool.pytest.ini_options]
-minversion = "7.0"
-addopts = "-ra -q --cov=src --cov-report=html --cov-report=term"
-testpaths = [
-    "tests",
-]
-
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
+disallow_untyped_defs = false
