--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,40 @@
-# Core dependencies
-click>=8.1.0
-pyyaml>=6.0
-rich>=13.0.0
-pytz>=2023.3
-
-# Code analysis
-tree-sitter>=0.20.0
-pygments>=2.16.0
-astroid>=3.0.0
-
-# Diagram generation
-graphviz>=0.20.0
-# mermaid-cli  # npmでインストール: npm install -g @mermaid-js/mermaid-cli
-playwright>=1.40.0
-
-# AST parsers for different languages
-esprima>=4.0.1  # JavaScript AST parser
-javalang>=0.13.0  # Java AST parser
-
-# Utilities
-python-dotenv>=1.0.0
-loguru>=0.7.0
-diskcache>=5.6.0
-psutil>=5.9.0  # For memory monitoring in security limits
-
-# Development dependencies
-pytest>=7.4.0
-pytest-cov>=4.1.0
-black>=23.0.0
-flake8>=6.0.0
-mypy>=1.5.0
+astroid==3.3.11
+black==25.1.0
+click==8.2.1
+colorama==0.4.6
+coverage==7.10.3
+diskcache==5.6.3
+esprima==4.0.1
+flake8==7.3.0
+graphviz==0.21
+greenlet==3.2.4
+iniconfig==2.1.0
+javalang==0.13.0
+loguru==0.7.3
+markdown-it-py==4.0.0
+mccabe==0.7.0
+mdurl==0.1.2
+mypy==1.17.1
+mypy-extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+playwright==1.54.0
+pluggy==1.6.0
+psutil==7.0.0
+pycodestyle==2.14.0
+pycparser==2.22
+pyee==13.0.0
+pyflakes==3.4.0
+pygments==2.19.2
+pytest==8.4.1
+pytest-cov==6.2.1
+python-dotenv==1.1.1
+pytz==2025.2
+pyyaml==6.0.2
+rich==14.1.0
+six==1.17.0
+tree-sitter==0.25.1
+tree-sitter-languages==1.10.2
+typing-extensions==4.14.1
+win32-setctime==1.2.0
